syntax = "proto3";
package proto;

option go_package = "github.com/monkrus/grpc-from0;grpc_from0";

service Payload{
  rpc Generate (PayloadGenerateRequest) returns (PayloadGenerateResponse){}
  rpc Verificate (PayloadVerificateRequest) returns (PayloadVerificateResponse){}
}

message PayloadGenerateRequest {
  string phone_number = 1;
}

message PayloadGenerateResponse {
  string token = 1;
}

message PayloadVerificateRequest {
  string token = 1;
  string otp = 2;
}

message PayloadVerificateResponse {
  bool success = 1;
  string message = 2;
}

